app/static/css/style2.css
/* ... */
.product-box .product-imitation {
    background-color: #ffffff;
    padding: 0;
    max-height: 100% !important;
}
.product-imitation.pls {
    background-color: #f8f8f9;
}
.product-box .product-desc {
    position: static;
    padding: 15px;
}

.product-box .product-desc .product-source {
    position: absolute;
    top: 16px;
    left: 16px;
    background-color: #ffffff;
    border: 1px solid #e6ebef !important;
    border-radius: 6px;
    padding: 2px;
}

.product-box .product-desc .product-source a {
    font-size: 13px;
    font-weight: 600;
    color: #1c1c1c;
}

.product-box .product-desc .product-price {
    position: static;
    background-color: transparent;
    color: #1d262f;
    padding: 0;
    font-size: 16px;
    height: 25px;
    display: block;
}

.product-box .product-desc .product-type {
    display: none;
}

.product-box .product-desc .product-name {
    height: 60px;
    font-size: 16px !important;
    line-height: 20px;
    font-weight: 500;
    color: #3b4d5e;
    overflow: hidden;
    display: -webkit-box;
    -webkit-box-orient: vertical;\left: ;
    -webkit-line-clamp: 3;
}
.product-box .product-imitation.pls + .product-desc .product-name {
    height: 20px;
}

.single-line-text-overflow {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    display: block;
}

.multi-line-text-overflow {
    overflow: hidden;
    display: -webkit-box !important;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
}

.slimScrollDiv {
    width: 228px !important;
}

.item-icon {
    position: absolute;
    left: 12px;
    top: 12px;
}

.fa.item-icon {
    left: 42px;
    font-size: 18px;
    top: 10px;
}

#mini-side-menu .fa.item-icon {
    left: 12px;
}

.navbar-default.pls {
    background-color: #24272e !important;
}

.sidebar .profile {
    display: none;
}

.sidebar .account {
    display: none;
}

.sidebar ul {
    padding-left: 4px;
    padding-right: 12px;
    padding-top: 17px;
}

.new.sidebar ul {
    padding-left: 16px;
    padding-right: 16px;
}

.sidebar ul li {
    line-height: 20px;
    font-weight: 500;
    font-size: 13px;
    color: #b0bfce;
    transition: .2s background-color;
    border-radius: 6px;
}

.new.sidebar ul li {
    font-size: 16px;
    color: #585757;
}

.sidebar ul li.active,
.sidebar ul li:hover {
    background-color: #485e74;
}

.new.sidebar ul li.active,
.new.sidebar ul li:hover {
    background-color: #6BAA55;
    color: #FFFFFF;
}

.sidebar ul li.section,
.sidebar ul li.section:hover {
    cursor: pointer;
    border-radius: 0;
    background-color: transparent;
}

.sidebar ul li a {
    padding: 10px 0 10px 40px;
    font-size: 13px;
    font-weight: 500;
    position: relative;
}

.new.sidebar ul li a {
    padding: 10px 8px 10px 40px;
    font-size: 16px;
    font-weight: 400;
    line-height: 24px;
    height: 100%;
}

.sidebar ul li a i.item-icon {
    position: absolute;
    margin: 2px 0px 0px -27px;
    display: block;
}

.sidebar .section span.item-title,
.sidebar .item,
.sidebar .section-no-icon {
    margin-left: 8px;
}

.new.sidebar .section span.item-title,
.new.sidebar .item,
.new.sidebar .section-no-icon {
    margin-left: 0;
}

.sidebar .section {
    margin: 0;
    padding: 25px 0 8px;
}

.new.sidebar .section {
    padding: 0;
}

.sidebar ul .section .section-header .section-header-content {
    width: 221px;
}

.new.sidebar ul .section .section-header .section-header-content {
    padding: 10px 8px 10px 40px;
    position: relative;
}

.sidebar ul .section .section-header .section-header-content:hover .item-title,
.sidebar ul .section .section-header .section-header-content:hover .nav-menu-caret {
  cursor: pointer;
  color: #F6F8F9;
}

.new.sidebar ul .section .section-header .section-header-content:hover .item-title,
.new.sidebar ul .section .section-header .section-header-content:hover .nav-menu-caret {
  color: #585757;
}

.sidebar ul .section .section-header .item-title {
    color: #B0BFCE;
    font-size: 12px;
    font-weight: 400;
    text-transform: uppercase;
    width: 185px;
}

.new.sidebar ul .section .section-header .item-title {
    font-size: 16px;
    font-weight: 400;
    line-height: 24px;
    color: #676a6c;
    text-transform: none;
    width: auto;
}

/*.sidebar .navfooter li {
    display: inline-block;
    width: 50px;
    text-align: center;
}

.sidebar .navfooter .fa {
    display: inline-block;
    font-size: 35px;
    color: #6BAA55;
}

.navfooter li a {
  padding: 6px !important;
}*/

.sidebar ul .item {
    padding-left: 0;
}

#change-variant-modal .row label {
    cursor: pointer;
}

.nav-menu-caret {
  padding: 3px 8px;
  float: right;
}

.wrapper-content {
    padding: 0 10px 80px;
}

.breadcrumbs-container {
    background-color: transparent;
    border-bottom: 0 none !important;
    padding: 12px 26px;
    padding: 12px 10px 12px 26px;
    display: flex;
    align-items: center;
}

.breadcrumbs-container .breadcrumb-right-menu {
    display: none;
}

.breadcrumbs-container .page-heading {
    padding: 6px 20px 0 0;
}

.breadcrumbs-container .breadcrumb {
    background-color: transparent;
}

.breadcrumbs-container .breadcrumb > li,
.breadcrumbs-container .breadcrumb > li a {
    font-weight: 400;
    font-size: 16px;
    color: #62809d;
    white-space: nowrap;
}

/*.breadcrumbs-container .breadcrumb li a.btn {
    color: #fff;
}
*/
.breadcrumbs-container .breadcrumb > li:before {
    content: '';
    border: solid #62809d;
    border-width: 0 1.5px 1.5px 0;
    display: inline-block;
    padding: 2px;
    transform: rotate(-45deg);
    margin: 0 15px 2px 10px;
}

.breadcrumbs-container .breadcrumb li.pull-right {
    margin-top: -6px;
}
.breadcrumbs-container .breadcrumb li.pull-right:before {
    content: none;
}

.breadcrumbs-container .breadcrumb li.active:before {
    border-color: #2D3B48;
}

.breadcrumbs-container .breadcrumb li:first-child:before,
.breadcrumbs-container .breadcrumb li:first-child a:before {
    display: none;
}
/* ... */

